--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -4,11 +4,12 @@
     android:orientation="vertical"
     android:padding="16dp">
 
-    <EditText
-        android:id="@+id/editTextName"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:hint="Enter Name" />
+    <TextView
+        android:id="@+id/textViewName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:text="КАТАЛОГ" />
 
     <Button
         android:id="@+id/buttonAdd"
@@ -16,11 +17,6 @@
         android:layout_height="wrap_content"
         android:text="Add" />
 
-    <Button
-        android:id="@+id/buttonRead"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Read" />
 
     <Button
         android:id="@+id/buttonProfile"
