--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -47,4 +47,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Назад" />
+    <Button
+        android:id="@+id/applyButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Применить" />
 </LinearLayout>
