--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -52,4 +52,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Применить" />
+    <Button
+        android:id="@+id/favoriteButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Избранное" />
 </LinearLayout>
