--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -33,4 +33,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Назад" />
+    <Button
+        android:id="@+id/favoriteButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="в избранное" />
 </LinearLayout>
