--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -10,6 +10,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Назад" />
+    <!-- Кнопка для выбора изображения -->
+    <Button
+        android:id="@+id/selectImageButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Выбрать изображение" />
+
+    <!-- ImageView для отображения выбранного изображения -->
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginTop="16dp"
+        android:scaleType="centerCrop" />
     <EditText
         android:id="@+id/brandEditText"
         android:layout_width="match_parent"
