--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -43,4 +43,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="в избранное" />
+    <Button
+        android:id="@+id/deleteButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="удалить" />
 </LinearLayout>
