--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -22,9 +22,9 @@
         android:layout_height="wrap_content"
         android:textSize="16sp" />
     <Button
-        android:id="@+id/applyButton"
+        android:id="@+id/favoriteButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="фффффф" />
+        android:text="в избранное" />
 
 </LinearLayout>
