--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -10,7 +10,8 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_vertical"
-        android:padding="16dp">
+        android:padding="10dp"
+        android:layout_marginStart="16dp">
 
         <TextView
             android:id="@+id/textViewName"
@@ -18,22 +19,30 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textSize="24sp"
-        android:textColor="@android:color/white"
-        android:text="КАТАЛОГ"
-        android:gravity="center" />
+            android:textColor="@android:color/white"
+            android:layout_marginStart="16dp"
+            android:text="КАТАЛОГ"
+            android:gravity="center" />
 
         <Button
             android:id="@+id/buttonProfile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
             android:text="Profile" />
 
     </LinearLayout>
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:padding="10dp"
+        android:background="@android:color/white" />
     <Button
         android:id="@+id/buttonAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:text="Add" />
 
     <ListView
