--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,6 +5,36 @@
     android:orientation="vertical"
     android:padding="16dp">
 
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:padding="10dp"
+        android:layout_marginStart="16dp">
+
+        <Button
+            android:id="@+id/backButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Назад"
+            android:layout_gravity="start" />
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+        <Button
+            android:id="@+id/favoriteButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Избранное" />
+
+    </LinearLayout>
+
+
     <ImageView
         android:id="@+id/profileImageView"
         android:layout_width="100dp"
@@ -43,18 +73,9 @@
         android:layout_marginBottom="16dp" />  <!-- Отступ снизу -->
 
     <Button
-        android:id="@+id/backButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Назад" />
-    <Button
         android:id="@+id/applyButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Применить" />
-    <Button
-        android:id="@+id/favoriteButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Избранное" />
+
 </LinearLayout>
