--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -6,9 +6,10 @@
     android:padding="16dp">
     <Button
         android:id="@+id/backButton"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Назад" />
+        android:text="Назад"
+        android:layout_gravity="start" />
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
