--- a/app/src/main/res/layout/activity_favorite.xml
+++ b/app/src/main/res/layout/activity_favorite.xml
@@ -5,9 +5,10 @@
     android:layout_height="match_parent">
     <Button
         android:id="@+id/backButton"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Назад" />
+        android:text="Назад"
+        android:layout_gravity="start" />
     <ListView
         android:id="@+id/listViewNames"
         android:layout_width="match_parent"
