--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -26,9 +26,12 @@
 
     <Button
         android:id="@+id/selectImageButton"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:scaleType="centerCrop"
+        android:padding="16dp"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:textSize="16sp"
         android:text="Выбрать изображение" />
 
     <EditText
