--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -39,12 +39,21 @@
 
 
     <ImageView
-        android:id="@+id/profileImageView"
+        android:id="@+id/imageView"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:src="@drawable/unnamed"
         android:layout_gravity="center"
         android:layout_marginBottom="16dp" />
+    <Button
+        android:id="@+id/selectImageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="выбрать"
+        android:padding="16dp"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:textSize="16sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
